--- a/D-TECT/src/main/resources/templates/user/user_terms.html
+++ b/D-TECT/src/main/resources/templates/user/user_terms.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmln:th="http://www.thymleaf.org">
 
 <head>
     <meta charset="UTF-8" />
@@ -10,7 +10,7 @@
 
 <body>
     <a href="/" class="logo" aria-label="D-tect 홈으로">
-        <img src="./images/logo.png" alt="D-tect 로고">
+        <img th:src="@{/images/logo.png}" alt="D-tect 로고">
     </a>
 
     <main class="wrap">
@@ -44,7 +44,7 @@
         </section>
     </main>
 
-    <script src="./js/user_terms.js"></script>
+    <script th:src="@{/js/user_terms.js}"></script>
 </body>
 
 </html>
