--- a/D-TECT/src/main/resources/templates/user/user_mypage.html
+++ b/D-TECT/src/main/resources/templates/user/user_mypage.html
@@ -21,7 +21,7 @@
 
         <div class="right">
             <div class="user-chip">
-                <img src="profile.png" alt="" class="avatar" />
+                <img th:src="@{/images/user_icon.png}" alt="" class="avatar" />
                 <span class="user-name">000 님</span>
             </div>
             <button type="button" class="text-link" id="logoutBtn">로그아웃</button>
