update : all html xmlns:th="http://www.thymleaf.org" set

--- a/D-TECT/src/main/resources/templates/public/change_password.html
+++ b/D-TECT/src/main/resources/templates/public/change_password.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko">
+<html lang="ko" xmlns:th="http://www.thymleaf.org">
 
 <head>
     <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
 <body>
     <!-- 좌상단 로고(200px) -->
     <a href="/" class="logo" aria-label="D-tect 홈으로">
-        <img src="./images/logo.png" alt="D-tect 로고">
+        <img th:src="@{/images/logo.png}" alt="D-tect 로고">
     </a>
 
     <main class="wrap">
@@ -76,7 +76,7 @@
         </div>
     </div>
 
-    <script src="./js/change_password.js"></script>
+    <script th:src="@{/js/change_password.js}"></script>
 </body>
 
 </html>
