--- a/D-TECT/src/main/resources/templates/user/user_mypage.html
+++ b/D-TECT/src/main/resources/templates/user/user_mypage.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ko" xmln:th="http://www.thymleaf.org">
+<html lang="ko" xmlns:th="http://www.thymleaf.org">
 
 <head>
     <meta charset="utf-8" />
