--- a/D-TECT/src/main/resources/templates/public/index.html
+++ b/D-TECT/src/main/resources/templates/public/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-tect | Log-in</title>
-    <link rel="stylesheet" th:href="@{/css/index.css}" />
+    <link rel="stylesheet" th:href="@{/css/public/index.css}" />
 </head>
 
 <body>
@@ -21,11 +21,11 @@
 
             <form id="loginForm" novalidate>
                 <label class="field">
-                    <input type="text" id="userid" name="userid" placeholder="아이디를 입력하세요" autocomplete="username" />
+                    <input type="text" id="username" name="username" placeholder="아이디를 입력하세요" autocomplete="username" />
                 </label>
 
                 <label class="field">
-                    <input type="password" id="pwd" name="pwd" placeholder="비밀번호를 입력하세요"
+                    <input type="password" id="password" name="password" placeholder="비밀번호를 입력하세요"
                         autocomplete="current-password" />
                 </label>
 
@@ -33,7 +33,7 @@
             </form>
 
             <nav class="links" aria-label="보조 메뉴">
-                <a href="/signup.html">회원가입</a>
+                <a href="/chooseRolePage">회원가입</a>
                 <a href="/find-id.html">ID 찾기</a>
                 <a href="/reset-password.html">PW 재설정</a>
             </nav>
@@ -69,7 +69,7 @@
         </section>
     </main>
 
-    <script th:src="@{/js/index.js}"></script>
+    <script th:src="@{/js/public/index.js}"></script>
 </body>
 
 </html>
