--- a/D-TECT/src/main/resources/templates/public/start.html
+++ b/D-TECT/src/main/resources/templates/public/start.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-tect 시작하기</title>
-    <link rel="stylesheet" th:href="@{/css/start.css}" />
+    <link rel="stylesheet" th:href="@{/css/public/start.css}" />
 </head>
 
 <body>
@@ -25,10 +25,10 @@
     </main>
 
     <!-- CTA 버튼 -->
-    <button class="cta" type="button" aria-label="D-tect 도움받기" onclick="location.href='./index.html'">D-tect에게
+    <button class="cta" type="button" aria-label="D-tect 도움받기" onclick="location.href='/loginPage'">D-tect에게
         도움받기</button>
 
-    <script th:src="@{/js/start.js}"></script>
+    <script th:src="@{/js/public/start.js}"></script>
 </body>
 
 </html>
