--- a/D-TECT/src/main/resources/templates/user/user_mypage.html
+++ b/D-TECT/src/main/resources/templates/user/user_mypage.html
@@ -69,6 +69,7 @@
                     <div class="col">분류</div>
                     <div class="col">매칭일</div>
                     <div class="col">매칭여부</div>
+                    <div class="col">채팅방</div>
                 </div>
 
                 <ul id="applyList" class="list-body" role="rowgroup" aria-live="polite"></ul>
