--- a/D-TECT/src/main/resources/templates/public/signup.html
+++ b/D-TECT/src/main/resources/templates/public/signup.html
@@ -22,7 +22,7 @@
             <div class="meta">
                 <h2>법률 전문가 회원가입</h2>
                 <p class="desc">사건 상담·자문 매칭, 문서 자동 수령, 정산 대시보드 제공</p>
-                <button class="btn primary" type="button" onclick="location.href='/joinExpertPage'">
+                <button class="btn primary" type="button" onclick="location.href='/expertTermPage'">
                     전문가로 가입하기
                 </button>
             </div>
@@ -34,7 +34,7 @@
             <div class="meta">
                 <h2>일반 사용자 회원가입</h2>
                 <p class="desc">근거 캡처·OCR·PDF 자동생성, 상담 가이드 & 연결</p>
-                <button class="btn primary" type="button" onclick="location.href='/joinUserPage'">
+                <button class="btn primary" type="button" onclick="location.href='/userTermPage'">
                     사용자로 가입하기
                 </button>
             </div>
