--- a/D-TECT/src/main/resources/templates/expert/expert_signup.html
+++ b/D-TECT/src/main/resources/templates/expert/expert_signup.html
@@ -108,13 +108,14 @@
                                 id="btnFile">찾아보기</button></p>
                     </div>
                 </div>
-
-                <!-- 약관으로 이동 -->
-                <div class="actions">
-                    <p class="note">※ <b>약관 확인 및 동의</b> 후 회원가입이 가능합니다.</p>
-                    <button type="button" id="goTerm" class="terms-btn" aria-label="약관 보기" onclick = "location.href= '/expertTermPage'">약관 보기
-                        <span>→</span></button>
-                </div>
+                
+                <!-- 액션 -->
+				<div class="actions">
+					<button id="btnSubmit" class="btn black" type="button" disabled>회원가입</button>
+					<button id="btnCancel" class="link" type="button">회원가입
+						취소하기</button>
+				</div>
+                
             </form>
         </section>
     </main>
