feat : 공통 - 아이디찾기/비밀번호 재설정 페이지 연결, 일반회원 - 메인페이지(분석)/내 정보 페이지/수집(캡쳐) 페이지 연결, 전문가 - 내 정보페이지 연결, 관리자 - 관리자 메인페이지 연결

--- a/D-TECT/src/main/resources/templates/expert/expert_mypage.html
+++ b/D-TECT/src/main/resources/templates/expert/expert_mypage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 전문가 마이페이지</title>
-    <link rel="stylesheet" th:href="@{/css/expert_mypage.css}" />
+    <link rel="stylesheet" th:href="@{/css/expert/expert_mypage.css}" />
 </head>
 
 <body th:attr="data-expert-id=${expertId}">
@@ -127,6 +127,6 @@
     </section>
 </main>
 
-<script th:src="@{/js/expert_mypage.js}"></script>
+<script th:src="@{/js/expert/expert_mypage.js}"></script>
 </body>
 </html>
