--- a/D-TECT/src/main/resources/templates/public/change_password.html
+++ b/D-TECT/src/main/resources/templates/public/change_password.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>D-tect | 비밀번호 변경</title>
-    <link rel="stylesheet" href="./css/change_password.css" />
+    <link rel="stylesheet" th:href="@{/css/public/change_password.css}" />
 </head>
 
 <body>
@@ -34,6 +34,17 @@
                         <button type="button" class="chip" id="btnEmail">이메일 인증</button>
                     </div>
                 </div>
+                
+                <!-- 이메일 인증번호 입력 -->
+                <div class="row" id="emailCodeRow" style="display:none">
+                	<span class="dot" aria-hidden="true"></span>
+				    <label for="emailCode">인증번호</label>
+				    <div class="inline">
+				    	<input id="emailCode" name="emailCode" type="text" placeholder="메일로 받은 인증번호 입력" />
+				    	<button type="button" class="chip" id="btnVerifyEmail">인증 확인</button>
+				    </div>
+				    <span id="emailMsg" class="msg" aria-live="polite"></span>
+				</div>
 
                 <div class="row">
                     <label for="phone">전화번호</label>
@@ -76,7 +87,7 @@
         </div>
     </div>
 
-    <script th:src="@{/js/change_password.js}"></script>
+    <script type = "module" th:src="@{/js/public/change_password.js}"></script>
 </body>
 
 </html>
