--- a/D-TECT/src/main/resources/templates/user/user_mypage.html
+++ b/D-TECT/src/main/resources/templates/user/user_mypage.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>D-tect | 마이페이지</title>
-    <link rel="stylesheet" th:href="@{/css/user_mypage.css}" />
+    <link rel="stylesheet" th:href="@{/css/user/user_mypage.css}" />
 </head>
 
 <body th:attr="data-user-id=${userId}">
@@ -94,6 +94,6 @@
     </section>
 </main>
 
-<script th:src="@{/js/user_mypage.js}"></script>
+<script th:src="@{/js/user/user_mypage.js}"></script>
 </body>
 </html>
