--- a/D-TECT/src/main/resources/templates/public/index.html
+++ b/D-TECT/src/main/resources/templates/public/index.html
@@ -29,13 +29,13 @@
                         autocomplete="current-password" />
                 </label>
 
-                <button type="submit" class="btn primary">로그인</button>
+                <button type="submit" class="btn primary" onclick = "location.href = ''">로그인</button>
             </form>
 
             <nav class="links" aria-label="보조 메뉴">
                 <a href="/chooseRolePage">회원가입</a>
-                <a href="/find-id.html">ID 찾기</a>
-                <a href="/reset-password.html">PW 재설정</a>
+                <a href="/findIdPage">ID 찾기</a>
+                <a href="/changePasswordPage">PW 재설정</a>
             </nav>
 
             <div class="divider"><span>또는</span></div>
